Made the numbers display in the output

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="display">0</div>
-        <div class="numbers-buttons">
-            <div id="1">1</div>
-            <div id="2">2</div>
-            <div id="3">3</div>
-            <div id="4">4</div>
-            <div id="5">5</div>
-            <div id="6">6</div>
-            <div id="7">7</div>
-            <div id="8">8</div>
-            <div id="9">9</div>
-            <div id="clear-button">Clear</div>
-            <div id="equals-button">=</div>
-        </div>
-        <div class="buttons">
-            <div id="divide-button">/</div>
-            <div id="multiply-button">x</div>
-            <div id="subtract-button">-</div>
-            <div id="add-button">+</div>
+        <div id="display">3535353</div>
+        <div id="buttons">
+            <button class="button" id="7" onclick="getNr7(), displayValue()">7</button>
+            <button class="button" id="8" onclick="getNr8(), displayValue()">8</button>
+            <button class="button" id="9" onclick="getNr9(), displayValue()">9</button>
+            <button class="button" id="divide-button">/</button>
+            <button class="button" id="4" onclick="getNr4(), displayValue()">4</button>
+            <button class="button" id="5" onclick="getNr5(), displayValue()">5</button>
+            <button class="button" id="6" onclick="getNr6(), displayValue()">6</button>
+            <button class="button" id="multiply-button">x</button>
+            <button class="button" id="1" onclick="getNr1(), displayValue()">1</button>
+            <button class="button" id="2" onclick="getNr2(), displayValue()">2</button>
+            <button class="button" id="3" onclick="getNr3(), displayValue()">3</button>
+            <button class="button" id="subtract-button">-</button>
+            <button class="button" id="0" onclick="getNr0(), displayValue()">0</button>
+            <button class="button" id="clear-button">Clear</button>
+            <button class="button" id="equals-button">=</button>
+            <button class="button" id="add-button">+</button>
         </div>
     </div>        
 </body>
