Made functions that store numbers and got the first calculation to work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="button" id="subtract-button" onclick="getSubtract(), displayValue()">-</button>
             <button class="button" id="0" onclick="getNr0(), displayValue()">0</button>
             <button class="button" id="clear-button" onclick="clearDisplay()">Clear</button>
-            <button class="button" id="equals-button">=</button>
+            <button class="button" id="equals-button" onclick="calculate()">=</button>
             <button class="button" id="add-button" onclick="getAdd(), displayValue()">+</button>
         </div>
     </div>        
