Made that calculator can do multiple calculations

--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="display"></div>
-        <div id="buttons">
-            <button class="button" id="7" onclick="getNr7(), displayOutput()">7</button>
-            <button class="button" id="8" onclick="getNr8(), displayOutput()">8</button>
-            <button class="button" id="9" onclick="getNr9(), displayOutput()">9</button>
-            <button class="button" id="divide-button" onclick="getDivide(), displayOutput()">/</button>
-            <button class="button" id="4" onclick="getNr4(), displayOutput()">4</button>
-            <button class="button" id="5" onclick="getNr5(), displayOutput()">5</button>
-            <button class="button" id="6" onclick="getNr6(), displayOutput()">6</button>
-            <button class="button" id="multiply-button" onclick="getMultiply(), displayOutput()">x</button>
-            <button class="button" id="1" onclick="getNr1(), displayOutput()">1</button>
-            <button class="button" id="2" onclick="getNr2(), displayOutput()">2</button>
-            <button class="button" id="3" onclick="getNr3(), displayOutput()">3</button>
-            <button class="button" id="subtract-button" onclick="getSubtract(), displayOutput()">-</button>
-            <button class="button" id="0" onclick="getNr0(), displayOutput()">0</button>
-            <button class="button" id="clear-button" onclick="clearDisplay()">Clear</button>
-            <button class="button" id="equals-button" onclick="calculate()">=</button>
-            <button class="button" id="add-button" onclick="getAdd(), displayOutput()">+</button>
+        <div class="calculator">
+            <div id="display"></div>
+            <div class="buttons">
+                <button class="button" id="7" onclick="getNr7(), displayOutput()">7</button>
+                <button class="button" id="8" onclick="getNr8(), displayOutput()">8</button>
+                <button class="button" id="9" onclick="getNr9(), displayOutput()">9</button>
+                <button class="button" id="divide-button" onclick="getDivide(), displayOutput()">/</button>
+                <button class="button" id="4" onclick="getNr4(), displayOutput()">4</button>
+                <button class="button" id="5" onclick="getNr5(), displayOutput()">5</button>
+                <button class="button" id="6" onclick="getNr6(), displayOutput()">6</button>
+                <button class="button" id="multiply-button" onclick="getMultiply(), displayOutput()">x</button>
+                <button class="button" id="1" onclick="getNr1(), displayOutput()">1</button>
+                <button class="button" id="2" onclick="getNr2(), displayOutput()">2</button>
+                <button class="button" id="3" onclick="getNr3(), displayOutput()">3</button>
+                <button class="button" id="subtract-button" onclick="getSubtract(), displayOutput()">-</button>
+                <button class="button" id="0" onclick="getNr0(), displayOutput()">0</button>
+                <button class="button" id="clear-button" onclick="clearDisplay()">Clear</button>
+                <button class="button" id="equals-button" onclick="calculate()">=</button>
+                <button class="button" id="add-button" onclick="getAdd(), displayOutput()">+</button>
+            </div>
         </div>
     </div>        
 </body>
